--- a/gogostudy.html
+++ b/gogostudy.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 		<header>
-			<h1>HTML+CSS</h1>
+			<h1><a href="./gogostudy.html">HTML+CSS</a></h1>
 		</header>
 		<div id="wrap">
 			<section id="container">
@@ -98,176 +98,319 @@
 				</div>
 				<div id="sec02">
 					<h2>CSS</h2>			
-						<ul>
-							<li><a href="./css/inline_style.html">인라인 스타일 적용</a></li>
-							<li><a href="./css/css01.html">단락태그</a>
-								<ul>
-									<li><a href="./css/css01.css">단락태그-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css02.html">테두리(border)</a>
-								<ul>
-									<li><a href="./css/css02.css">테두리(border)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css03.html">박스(크기지정)</a>
-								<ul>
-									<li><a href="./css/css03.css">박스(크기지정)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css04.html">float 속성</a>
-								<ul>
-									<li><a href="./css/css04.css">float 속성-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css05.html">텍스트 관련 속성</a>
-								<ul>
-									<li><a href="./css/css05.css">텍스트 관련 속성-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css06.html">폰트 적용, 텍스트 크기, em, rem,텍스트 그림자</a>
-								<ul>
-									<li><a href="./css/css06.css">폰트 적용, 텍스트 크기, em, rem,텍스트 그림자-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css07.html">배경색(투명도 포함)</a>
-								<ul>
-									<li><a href="./css/css07.css">배경색(투명도 포함)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css08.html">배경 이미지</a>
-								<ul>
-									<li><a href="./css/css08.css">배경 이미지-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css09.html">박스, 패딩으로 이미지 위치 및 색상 범위 적용(border-box, content-box)</a>
-								<ul>
-									<li><a href="./css/css09.css">박스, 패딩으로 이미지 위치 및 색상 범위 적용(border-box, content-box)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css10.html">배경 이미지 부착형태</a>
-								<ul>
-									<li><a href="./css/css10.css">배경 이미지 부착형태-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css11.html">목록에 배경 스타일, 배경 스타일 축약 사용</a>
-								<ul>
-									<li><a href="./css/css11.css">목록에 배경 스타일, 배경 스타일 축약 사용-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css12.html">기본 테이블 선, 색, 간격</a>
-								<ul>
-									<li><a href="./css/css12.css">기본 테이블 선, 색, 간격-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css13.html">기본 테이블 선, 색, 간격2</a>
-								<ul>
-									<li><a href="./css/css013.css">기본 테이블 선, 색, 간격2-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css14.html">이미지 CSS</a>
-								<ul>
-									<li><a href="./css/css14.css">이미지 CSS-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css15.html">모든 요소 여백 초기화, 블록요소 가운데 정렬, 가상 블록 정하기(#선택자:after)</a>
-								<ul>
-									<li><a href="./css/css15.css">모든 요소 여백 초기화, 블록요소 가운데 정렬, 가상 블록 정하기(#선택자:after)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css16.html">dispaly 속성</a>
-								<ul>
-									<li><a href="./css/css16.css">dispaly 속성-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/position01.html">position 속성(어렵..지만 구조잡을 때 필요)</a>
-								<ul>
-									<li><a href="./css/position01.css">position 속성(어렵..지만 구조잡을 때 필요)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/position02.html">position 속성2</a>
-								<ul>
-									<li><a href="./css/position02.css">position 속성2-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css17.html">z-index 사용하기</a>
-								<ul>
-									<li><a href="./css/css17.css">z-index 사용하기-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css18.html">box-sizing 속성</a>
-								<ul>
-									<li><a href="./css/css18.css">box-sizing 속성-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/css19.html">font-family(구글웹폰트) 사용하기</a>
-								<ul>
-									<li><a href="./css/css19.css">font-family(구글웹폰트) 사용하기-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/selector01.html">CSS 선택자</a>
-								<ul>
-									<li><a href="./css/selector01.css">CSS 선택자-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/selector02.html">하위, 자손(후손)선택자</a>
-								<ul>
-									<li><a href="./css/selector02.css">하위, 자손(후손)선택자-css</a></li>
-								</ul>
-							</li>
-							</li>
-							<li><a href="./css/selector03.html">일반 구조, 형제 구조, 시작문자, 반응문자, 부정 선택자</a>
-								<ul>
-									<li><a href="./css/selector03.css">일반 구조, 형제 구조, 시작문자, 반응문자, 부정 선택자-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/form_css.html">폼 태그 꾸미기(개인정보 입력창)</a>
-								<ul>
-									<li><a href="./css/form_css.css">폼 태그 꾸미기(개인정보 입력창)-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/animate01.html">CSS 애니메이션 효과와 변형 효과</a>
-								<ul>
-									<li><a href="./css/animate01.css">CSS 애니메이션 효과와 변형 효과-css</a></li>
-								</ul>
-							</li>
-							<li><a href="./css/animate02.html">CSS 애니메이션 효과 키프레임 활용</a>
-								<ul>
-									<li><a href="./css/animate02.css">CSS 애니메이션 효과 키프레임 활용-css</a></li>
-								</ul>
-							</li>
-						</ul>
+							<table>
+							<tr>
+								<th>주제</th>
+								<th>HTML 파일</th>
+								<th>CSS 파일</th>
+							</tr>
+							<tr>
+								<td>인라인 스타일 적용</td>
+								<td><a href="./css/inline_style.html">inline_style.html</a></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>단락태그</td>
+								<td><a href="./css/css01.html">css01.html</a></td>
+								<td><a href="./css/css01.css">css01.css</a></td>
+							</tr>
+							<tr>
+								<td>테두리(border)</td>
+								<td><a href="./css/css02.html">css02.html</a></td>
+								<td><a href="./css/css02.css">css02.css</a></td>
+							</tr>
+							<tr>
+								<td>박스(크기지정)</td>
+								<td><a href="./css/css03.html">css03.html</a></td>
+								<td><a href="./css/css03.css">css03.css</a></td>
+							</tr>
+							<tr>
+								<td>float 속성</td>
+								<td><a href="./css/css04.html">css04.html</a></td>
+								<td><a href="./css/css04.css">css04.css</a></td>
+							</tr>
+							<tr>
+								<td>텍스트 관련 속성</td>
+								<td><a href="./css/css05.html">css05.html</a></td>
+								<td><a href="./css/css05.css">css05.css</a></td>
+							</tr>
+							<tr>
+								<td>폰트 적용, 텍스트 크기, em, rem,텍스트 그림자</td>
+								<td><a href="./css/css06.html">css06.html</a></td>
+								<td><a href="./css/css06.css">css06.css</a></td>
+							</tr>
+							<tr>
+								<td>배경색(투명도 포함)</td>
+								<td><a href="./css/css07.html">css07.html</a></td>
+								<td><a href="./css/css07.css">css07.css</a></td>
+							</tr>
+							<tr>
+								<td>배경 이미지</td>
+								<td><a href="./css/css08.html">css08.html</a></td>
+								<td><a href="./css/css08.css">css08.css</a></td>
+							</tr>
+							<tr>
+								<td>박스, 패딩으로 이미지 위치 및 색상 범위 적용(border-box, content-box)</td>
+								<td><a href="./css/css09.html">css09.html</a></td>
+								<td><a href="./css/css09.css">css09.css</a></td>
+							</tr>
+							<tr>
+								<td>배경 이미지 부착형태</td>
+								<td><a href="./css/css10.html">css10.html</a></td>
+								<td><a href="./css/css10.css">css10.css</a></td>
+							</tr>
+							<tr>
+								<td>목록에 배경 스타일, 배경 스타일 축약 사용</td>
+								<td><a href="./css/css11.html">css11.html</a></td>
+								<td><a href="./css/css11.css">css11.css</a></td>
+							</tr>
+							<tr>
+								<td>기본 테이블 선, 색, 간격</td>
+								<td><a href="./css/css12.html">css12.html</a></td>
+								<td><a href="./css/css12.css">css12.css</a></td>
+							</tr>
+							<tr>
+								<td>기본 테이블 선, 색, 간격2</td>
+								<td><a href="./css/css13.html">css13.html</a></td>
+								<td><a href="./css/css13.css">css13.css</a></td>
+							</tr>
+							<tr>
+								<td>이미지 CSS</td>
+								<td><a href="./css/css14.html">css14.html</a></td>
+								<td><a href="./css/css14.css">css14.css</a></td>
+							</tr>
+							<tr>
+								<td>모든 요소 여백 초기화, 블록요소 가운데 정렬, 가상 블록 정하기(#선택자:after)</td>
+								<td><a href="./css/css15.html">css15.html</a></td>
+								<td><a href="./css/css15.css">css15.css</a></td>
+							</tr>
+							<tr>
+								<td>dispaly 속성</td>
+								<td><a href="./css/css16.html">css16.html</a></td>
+								<td><a href="./css/css16.css">css16.css</a></td>
+							</tr>
+							<tr>
+								<td>z-index 속성</td>
+								<td><a href="./css/css17.html">css17.html</a></td>
+								<td><a href="./css/css17.css">css17.css</a></td>
+							</tr>
+							<tr>
+								<td>position 속성(어렵..지만 구조잡을 때 필요)</td>
+								<td><a href="./css/position01.html">position01.html</a></td>
+								<td><a href="./css/position01.css">position01.css</a></td>
+							</tr>
+							<tr>
+								<td>position 속성2</td>
+								<td><a href="./css/position02.html">position02.html</a></td>
+								<td><a href="./css/position02.css">position02.css</a></td>
+							</tr>
+							<tr>
+								<td>box-sizing 속성</td>
+								<td><a href="./css/css18.html">css18.html</a></td>
+								<td><a href="./css/css18.css">css18.css</a></td>
+							</tr>
+							<tr>
+								<td>font-family(구글웹폰트) 사용하기</td>
+								<td><a href="./css/css19.html">css19.html</a></td>
+								<td><a href="./css/css19.css">css19.css</a></td>
+							</tr>
+							<tr>
+								<td>CSS 선택자</td>
+								<td><a href="./css/selector01.html">selector01.html</a></td>
+								<td><a href="./css/selector01.css">selector01.css</a></td>
+							</tr>
+							<tr>
+								<td>하위, 자손(후손)선택자</td>
+								<td><a href="./css/selector02.html">selector02.html</a></td>
+								<td><a href="./css/selector02.css">selector02.css</a></td>
+							</tr>
+							<tr>
+								<td>일반 구조, 형제 구조, 시작문자, 반응문자, 부정 선택자</td>
+								<td><a href="./css/selector03.html">selector03.html</a></td>
+								<td><a href="./css/selector03.css">selector03.css</a></td>
+							</tr>
+							<tr>
+								<td>폼 태그 꾸미기(개인정보 입력창)</td>
+								<td><a href="./css/form_css.html">form_css.html</a></td>
+								<td><a href="./css/form_css.css">form_css.css</a></td>
+							</tr>
+							<tr>
+								<td>CSS 애니메이션 효과와 변형 효과</td>
+								<td><a href="./css/animate01.html">animate01.html</a></td>
+								<td><a href="./css/animate01.css">animate01.css</a></td>
+							</tr>
+							<tr>
+								<td>CSS 애니메이션 효과 키프레임 활용</td>
+								<td><a href="./css/animate02.html">animate02.html</a></td>
+								<td><a href="./css/animate02.css">animate02.css</a></td>
+							</tr>
+							<tr>
+								<td>CSS 애니메이션 효과 복합적으로 함께 활용</td>
+								<td><a href="./css/animate03.html">animate03.html</a></td>
+								<td><a href="./css/animate03.css">animate03.css</a></td>
+							</tr>
+							<tr>
+								<td>플랙스 박스1</td>
+								<td><a href="./layout/flexbox/flexbox01.html">flexbox01.html</a></td>
+								<td><a href="./layout/flexbox/flexbox01.css">flexbox01.css</a></td>
+							</tr>
+							<tr>
+								<td>교차축(세로, 열, y) 방향 배치방법</td>
+								<td><a href="./layout/flexbox/flexbox02.html">flexbox02.html</a></td>
+								<td><a href="./layout/flexbox/flexbox02.css">flexbox02.css</a></td>
+							</tr>
+							<tr>
+								<td>교차축(가로, 행, x) 방향 배치방법</td>
+								<td><a href="./layout/flexbox/flexbox03.html">flexbox03.html</a></td>
+								<td><a href="./layout/flexbox/flexbox03.css">flexbox03.css</a></td>
+							</tr>
+							<tr>
+								<td>플랙스 안 요소들의 높이와 배치</td>
+								<td><a href="./layout/flexbox/flexbox04.html">flexbox04.html</a></td>
+								<td><a href="./layout/flexbox/flexbox04.css">flexbox04.css</a></td>
+							</tr>
+						</table>
 				</div>
-				<div id="sec03">
-					<h2>예제풀기</h2>
-						<ul>
-							<li>예제
-								<ul>
-									<li><a href="./tag/p92_11.html">list 태그 응용예시</a></li>
-					
-					<li><a href="./tag/resume.html">이력서 만들기(테이블) 예제</a></li>
-									<li><a href="./tag/resume_2.html">테이블 병합 예제</a></li>
-									<li><a href="./tag/frm/p115_07.html">로그인 예제</a></li>
-									<li><a href="./tag/frm/p116_08.html">radio, checkbox 예제</a></li>
-									<li><a href="./tag/join.html">회원가입1 예제</a></li>
-									<li><a href="./css/resume.html">이력서 꾸미기 예제</a></li>
-								</ul>
-							</li>
-							<li>review
-								<li><a href="./tag/review01.html">텍스트 태그 예제</a></li>
-								<li><a href="./tag/frm/review02.html"> 회원가입2 예제</a></li>
-								<li><a href="./tag/review03.html">텍스트, 테이블, 폼 태그 예제</a></li>
-								<li><a href="./tag/review04.html">리스트, 북마크, 푸터, 엔티티 예제</a></li>
-								<li><a href="./css/review05.html">position(relative, absolute 예제</a></li>
-								<li><a href="./css/review06.html">position(relative, absolute 예제2</a></li>
-							</li>
-						</ul>
+				<div id="sec03" class="3_t">
+					<h2>예제풀기</h2>					
+						<table id="ex_t">
+							<caption>예제</caption>
+								<tr>
+									<th>주제</th>
+									<th>HTML 파일</th>
+									<th>CSS 파일</th>
+								</tr>
+								<tr>
+									<td>list 태그 응용예시</td>
+									<td><a href="./tag/p92_11.html">p92_11.html</a></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>이력서 만들기(테이블) 예제</td>
+									<td><a href="./tag/resume.html">resume.html</a></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>테이블 병합 예제</td>
+									<td><a href="./tag/resume_2.html">resume_2.html</a></td>
+									<td></td>
+								<tr>
+								</tr>
+									<td>로그인 예제</td>
+									<td><a href="./tag/frm/p115_07.html">p115_07.html</a></td>
+									<td></td>
+								<tr>
+								</tr>
+									<td>radio, checkbox 예제</td>
+									<td><a href="./tag/frm/p116_08.html">p116_08.html</a></td>
+									<td></td>
+								<tr>
+								</tr>
+									<td>회원가입1 예제</td>
+									<td><a href="./tag/join.html">join.html</a></td>
+									<td></td>
+								<tr>
+								</tr>
+									<td>이력서 꾸미기 예제</td>
+									<td><a href="./css/resume.html">resume.html</a></td>
+									<td><a href="./css/resume.css">resume.css</a></td>
+								</tr>
+								<tr>
+									<td>웹사이트 기본 레이아웃 예제</td>
+									<td><a href="./layout/layout01/layout01.html">layout01.html</a></td>
+									<td><a href="./layout/layout01/css/layout01.css">layout01.css</a></td>
+								</tr>
+								<tr>
+									<td>커피빈 메인 페이지 예제</td>
+									<td><a href="./layout/coffeebean/index.html">index.html</a></td>
+									<td><a href="./layout/coffeebean/style.html">style.css</a></td>
+								</tr>
+								<tr>
+									<td>요안도라 메인 페이지 예제</td>
+									<td><a href="./layout/joandora/index.html">index.html</a></td>
+									<td><a href="./layout/joandora/style.css">style.css</a></td>
+								</tr>
+								<tr>
+									<td>요안도라 메인 페이지 예제(풀이 ver)</td>
+									<td><a href="./layout/joandora/index_2.html">index_2.html</a></td>
+									<td><a href="./layout/joandora/style_2.css">style_2.css</a></td>
+								</tr>
+								<tr>
+									<td>이미지 캡션(이미지가 커지면서 캡션이 나오는 애니메이션)</td>
+									<td><a href="./layout/img_caption.html">img_caption.html</a></td>
+									<td><a href="./layout/img_caption.css">img_caption.css</a></td>
+								</tr>
+						</table>	
+						<table id="review_t" class="3_t">	
+							<caption>review</caption>
+								<tr>									
+									<th>주제</th>
+									<th>HTML 파일</th>
+									<th>CSS 파일</th>
+								</tr>
+								<tr>
+									<td>01. 텍스트 태그 예제</td>
+									<td><a href="./tag/review01.html">review01.html</a></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>02. 회원가입2 예제</td>
+									<td><a href="./tag/frm/review02.html">review02.html</a></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>03. 텍스트, 테이블, 폼 태그 예제</td>
+									<td><a href="./tag/review03.html">review03.html</a></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>04. 디저트의 종류 (북마크, 리스트)</td>
+									<td><a href="./tag/review04.html">review04.html</a></td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>05. 리스트, 북마크, 푸터, 엔티티 예제</td>
+									<td><a href="./css/review05.html">review05.html</a></td>
+									<td><a href="./css/review05.css">review05.css</a></td>
+								</tr>
+								<tr>
+									<td>06. position(relative, absolute 예제2</td>
+									<td><a href="./css/review06.html">review06.html</a></td>
+									<td><a href="./css/review06.css">review06.css</a></td>
+								</tr>
+								<tr>
+									<td>07. 영화포스터 나열</td>
+									<td><a href="./layout/review07/index.html">index.html</a></td>
+									<td><a href="./layout/review07/style.css">style.css</a></td>
+								</tr>
+								<tr>
+									<td>08. 배경이미지 활용 메뉴 버튼 만들기</td>
+									<td><a href="./layout/review08/index.html">index.html</a></td>
+									<td><a href="./layout/review08/style.css">style.css</a></td>
+								</tr>
+								<tr>
+									<td>09. 페이지 만들기(구매방법 마일리지 구매 절차)</td>
+									<td><a href="./layout/review09/index.html">index.html</a></td>
+									<td>
+									<a href="./layout/review09/style.css">style.css</a><br />
+									<a href="./layout/review09/style_2.css">style_2.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>10. 폼나는 정보(이미지 좌표 사용)</td>
+									<td><a href="./layout/review10/index.html">index.html</a></td>
+									<td>
+									<a href="./layout/review10/style.css">style.css</a>
+									</td>
+								</tr>
+						</table>
 				</div>
 			</section>
 			<footer>
 				<h3>푸터...</h3>
 				<address>
-					나는 누구 여긴 어디.. &copy; 박선영
+					Park Sun Young <br />
+					Copyright &copy;. All rights reserved.
 				</address>
 				
 			</footer>
