--- a/gogostudy.html
+++ b/gogostudy.html
@@ -269,6 +269,26 @@
 								<td><a href="./layout/flexbox/flexbox04.html">flexbox04.html</a></td>
 								<td><a href="./layout/flexbox/flexbox04.css">flexbox04.css</a></td>
 							</tr>
+							<tr>
+								<td>네비게이션 마우스 오버 효과</td>
+								<td><a href="./layout/css_nav.html">css_nav.html</a></td>
+								<td><a href="./layout/css_nav.css">css_nav.css</a></td>
+							</tr>
+							<tr>
+								<td>미디어 쿼리1</td>
+								<td><a href="./layout/mq_orientation.html">mq_orientation.html</a></td>
+								<td><a href="./layout/mq1.css">mq1.css</a></td>
+							</tr>
+							<tr>
+								<td>미디어 쿼리2 - 이미지</td>
+								<td><a href="./layout/mq_img.html">mq_img.html</a></td>
+								<td><a href="./layout/mq_img.css">mq1.css</a></td>
+							</tr>
+							<tr>
+								<td>미디어 쿼리1 - 박스</td>
+								<td><a href="./layout/mq_box.html">mq_box.html</a></td>
+								<td><a href="./layout/mq_box.css">mq_box.css</a></td>
+							</tr>
 						</table>
 				</div>
 				<div id="sec03" class="3_t">
@@ -323,7 +343,7 @@
 								<tr>
 									<td>커피빈 메인 페이지 예제</td>
 									<td><a href="./layout/coffeebean/index.html">index.html</a></td>
-									<td><a href="./layout/coffeebean/style.html">style.css</a></td>
+									<td><a href="./layout/coffeebean/style.css">style.css</a></td>
 								</tr>
 								<tr>
 									<td>요안도라 메인 페이지 예제</td>
@@ -340,6 +360,11 @@
 									<td><a href="./layout/img_caption.html">img_caption.html</a></td>
 									<td><a href="./layout/img_caption.css">img_caption.css</a></td>
 								</tr>
+								<tr>
+									<td>Galaxy S7</td>
+									<td><a href="./layout/galaxy/index.html">index.html</a></td>
+									<td><a href="./layout/css/main.css">main.css</a></td>
+								</tr>								
 						</table>	
 						<table id="review_t" class="3_t">	
 							<caption>review</caption>
@@ -401,6 +426,14 @@
 									<td><a href="./layout/review10/index.html">index.html</a></td>
 									<td>
 									<a href="./layout/review10/style.css">style.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>11. 삼성코닝어드밴스드글라스</td>
+									<td><a href="./layout/review11/main.html">index.html</a></td>
+									<td>
+									<a href="./layout/review11/css/main.css">main.css</a>
+									<a href="./layout/review11/css/common.css">common.css</a>
 									</td>
 								</tr>
 						</table>
