--- a/gogostudy.html
+++ b/gogostudy.html
@@ -363,7 +363,7 @@
 								<tr>
 									<td>Galaxy S7</td>
 									<td><a href="./layout/galaxy/index.html">index.html</a></td>
-									<td><a href="./layout/css/main.css">main.css</a></td>
+									<td><a href="./layout/galaxy/css/main.css">main.css</a></td>
 								</tr>								
 						</table>	
 						<table id="review_t" class="3_t">	
