--- a/gogostudy_html_css.html
+++ b/gogostudy_html_css.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>SY HTML+CSS STUDY</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link href="./gogostudy.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
