--- a/gogostudy_html_css.html
+++ b/gogostudy_html_css.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>SY HTML+CSS STUDY</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <link href="./gogostudy.css" rel="stylesheet" type="text/css" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 <body>
 		<header>
@@ -483,8 +483,16 @@
 								<tr>
 									<td>막스마라</td>
 									<td><a href="./project02/index.html">index.html</a></td>
-									<td><a href="./project02/css/style.css">main.css</a><br />
+									<td><a href="./project02/css/style.css">style.css</a><br />
 									<a href="./project02/css/reset.css">reset.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>하이네캔</td>
+									<td><a href="./project03/index.html">index.html</a></td>
+									<td><a href="./project03/css/style.css">main.css</a><br />
+										<a href="./project03/css/reset.css">reset.css</a><br />
+										<a href="./project03/js/script.js">script.js</a>
 									</td>
 								</tr>
 						</table>
