--- a/project03/index.html
+++ b/project03/index.html
@@ -13,11 +13,11 @@
 	<h1 class="logo"><a href="#"><img src="./images/heineken-logo.svg" alt="메인로고"></a></h1>
 	<nav>
 		<ul class="gnb">
-			<li><a href="#">HOME</a></li>
-			<li><a href="#">ABOUT</a></li>
-			<li><a href="#">PHOTO</a></li>
-			<li><a href="#">CONTACT</a></li>
-			<li><a href="#">LOCATION</a></li>
+			<li><a href="#about">ABOUT</a></li>
+			<li><a href="#photo">PHOTO</a></li>
+			<li><a href="#review">REVIEW</a></li>
+			<li><a href="#contact">CONTACT</a></li>
+			<li><a href="#location">LOCATION</a></li>
 		</ul>
 		<span id="t_menu" class="menu-toggle-btn">
 			<span></span>
