--- a/project03/index.html
+++ b/project03/index.html
@@ -7,6 +7,7 @@
 	<link href="./css/main.css" rel="stylesheet" type="text/css" />
 	<script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="cfixed header"><!--헤더영역 시작-->
