--- a/sy_index.html
+++ b/sy_index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>SY JavaScript+jQury STUDY</title>
 <link href="./sy_index.css" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
 <body>
 		<header>
@@ -15,11 +16,57 @@
 					<h2><a href="./gogostudy_html_css.html">HTML+CSS</a></h2>
 				</div>
 				<div id="sec02">
-					<h2><a href="./gogostudy_js.html">JavaScript+jQury</a></h2
+					<h2><a href="./gogostudy_js.html">JavaScript+jQury</a></h2>
+				</div>
+				<div id="sec03">
+					<h2>PROJECT</h2>					
+						<table id="ex_t">
+								<tr>
+									<th>주제</th>
+									<th>HTML 파일</th>
+									<th>CSS 파일</th>
+									<th>JS 파일</th>
+								</tr>
+								<tr>
+									<td>페테르 파울 루벤스</td>
+									<td><a href="./project01/index.html">index.html</a></td>
+									<td><a href="./project01/css/main.css">main.css</a></td>
+								</tr>
+								<tr>
+									<td>막스마라</td>
+									<td><a href="./project02/index.html">index.html</a></td>
+									<td><a href="./project02/css/style.css">style.css</a><br />
+									<a href="./project02/css/reset.css">reset.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>하이네캔</td>
+									<td><a href="./project03/index.html">index.html</a></td>
+									<td><a href="./project03/css/style.css">main.css</a><br />
+										<a href="./project03/css/reset.css">reset.css</a></td>
+									<td><a href="./project03/js/script.js">script.js</a>
+									</td>
+								</tr>
+						</table>
+				</div>
+				<div id="sec04">
+					<h2>평가</h2>					
+						<table id="test_t">
+								<tr>
+									<th>주제</th>
+									<th>HTML 파일</th>
+									<th>CSS 파일</th>
+								</tr>
+								<tr>
+									<td>200714 박선영 웹표준(KCC)</td>
+									<td><a href="./박선영_웹표준/index.html">index.html</a></td>
+									<td><a href="./박선영_웹표준/css/style.css">style.css</a></td>
+								</tr>
+						</table>
 				</div>
 			</section>	
 			<footer>
-				<h3>푸터...</h3>
+				<h3>푸터</h3>
 				<address>
 					Park Sun Young <br />
 					Copyright &copy;. All rights reserved.
