--- a/gogostudy_html_css.html
+++ b/gogostudy_html_css.html
@@ -13,7 +13,7 @@
 		</header>
 		<div id="wrap">
 			<section id="container">
-				<div id="sec01">
+				<div class="sec01">
 					<h2>HTML</h2>
 						<table>
 							<tr>
@@ -98,7 +98,7 @@
 							</tr>	
 						</table>
 				</div>
-				<div id="sec02">
+				<div class="sec02">
 					<h2>CSS</h2>			
 							<table>
 							<tr>
@@ -293,7 +293,7 @@
 							</tr>
 						</table>
 				</div>
-				<div id="sec03">
+				<div class="sec03">
 					<h2>예제풀기</h2>					
 						<table id="ex_t">
 							<caption>예제</caption>
@@ -463,6 +463,29 @@
 									<td>
 									<a href="./review14/nav01.css">nav01.css</a><br />
 									<a href="./review14/nav02.css">nav02.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>15. 오늘의 집</td>
+									<td><a href="./review15/index.html">index.html</a></td>
+									<td>
+									<a href="./review15/css/main.css">main.css</a><br />
+									<a href="./review15/css/reset.css">reset.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>16. 세계 미술작품 (웹디자인 기능사 실기)</td>
+									<td><a href="./review16/index.html">index.html</a></td>
+									<td>
+									<a href="./review16/css/style.css">style.css</a>
+									</td>
+								</tr>
+								<tr>
+									<td>17. 인천대공원</td>
+									<td><a href="./review17/index.html">index.html</a></td>
+									<td>
+									<a href="./review17/css/style.css">style.css</a><br />
+									<a href="./review17/css/common.min.css">common.min.css</a>
 									</td>
 								</tr>
 						</table>
