--- a/sy_index.html
+++ b/sy_index.html
@@ -12,13 +12,22 @@
 		</header>
 		<div id="wrap">
 			<section id="container">
-				<div id="sec01">
+				<div class="sec01">
 					<h2><a href="./gogostudy_html_css.html">HTML+CSS</a></h2>
 				</div>
-				<div id="sec02">
+				<div class="sec02">
 					<h2><a href="./gogostudy_js.html">JavaScript+jQury</a></h2>
 				</div>
-				<div id="sec03">
+				<div class="sec03">
+					<h2><a href="./gogostudy_jquery_pl.html">jQuery Plugin</a></h2>
+				</div>
+				<div class="sec01">
+					<h2><a href="./gogostudy_js.html">jQueryUI</a></h2>
+				</div>
+				<div class="sec02">
+					<h2><a href="./gogostudy_js.html">Bootstrap</a></h2>
+				</div>
+				<div class="sec03">
 					<h2>PROJECT</h2>					
 						<table id="ex_t">
 								<tr>
@@ -49,7 +58,7 @@
 								</tr>
 						</table>
 				</div>
-				<div id="sec04">
+				<div class="sec01">
 					<h2>평가</h2>					
 						<table id="test_t">
 								<tr>
