--- a/gogostudy_js.html
+++ b/gogostudy_js.html
@@ -12,7 +12,7 @@
 		</header>
 		<div id="wrap">
 			<section id="container">
-				<div id="sec01">
+				<div class="sec01">
 					<h2>Javascript</h2>
 						<table>
 							<tr>
@@ -272,7 +272,7 @@
 							</tr>
 						</table>
 				</div>
-				<div id="sec02">
+				<div class="sec02">
 					<h2>jQuery</h2>			
 							<table>
 							<tr>
@@ -412,7 +412,7 @@
 							</tr>
 						</table>
 				</div>
-				<div id="sec03" class="3_t">
+				<div class="sec03" class="3_t">
 					<h2>예제풀기</h2>					
 						<table id="ex_t">
 							<caption>예제</caption>
