--- a/sy_index.html
+++ b/sy_index.html
@@ -56,6 +56,13 @@
 									<td><a href="./project03/js/script.js">script.js</a>
 									</td>
 								</tr>
+								<tr>
+									<td>국향</td>
+									<td><a href="./kookhyang/index.html">index.html</a></td>
+									<td></td>
+									<td><a href="./project03/js/script.js">script.js</a>
+									</td>
+								</tr>
 						</table>
 				</div>
 				<div class="sec01">
