--- a/sy_index.html
+++ b/sy_index.html
@@ -51,17 +51,24 @@
 								<tr>
 									<td>하이네캔</td>
 									<td><a href="./project03/index.html">index.html</a></td>
-									<td><a href="./project03/css/style.css">main.css</a><br />
+									<td><a href="./project03/css/main.css">main.css</a><br />
 										<a href="./project03/css/reset.css">reset.css</a></td>
 									<td><a href="./project03/js/script.js">script.js</a>
 									</td>
 								</tr>
+								</tr>
 								<tr>
-									<td>국향</td>
-									<td><a href="./kookhyang/index.html">index.html</a></td>
-									<td></td>
-									<td><a href="./project03/js/script.js">script.js</a>
-									</td>
+									<td>한국근대문학관</td>
+									<td><a href="./project04/index.html">index.html</a></td>
+									<td><a href="./project04/css/style.css">style.css</a></td>
+								</tr>
+								<tr>
+									<td>K2</td>
+									<td><a href="./project05/index.html">index.html</a></td>
+									<td><a href="./project05/css/style.css">index.html</a><br />
+										<a href="./project05/css/jquery.bxslider.css">jquery.bxslider.css</a></td>
+									<td><a href="./project05/js/script.js">script.js</a><br />
+										<a href="./project05/js/jquery.bxslider.js">jquery.bxslider.js</a></td>
 								</tr>
 						</table>
 				</div>
