--- a/project04/index.html
+++ b/project04/index.html
@@ -5,7 +5,6 @@
 	<title>한국근대문학관</title>
 <link href="./style.css" rel="stylesheet" type="text/css" />
 <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -42,66 +41,74 @@
 			<div id="box01"></div>
 			<div>
 				<div class="inner_sbox">
-					<h3>문학관 교육</h3>
-					<hr / class="t_line white_line">
+					<div class="sub_tit ed_white">
+						<h3>문학관 교육</h3>
+					</div>	
+						<hr / class="t_line white_line">
 				</div>
-				<div class="inner_sbox">				
-					<h3>문학관 행사</h3>
-					<hr / class="t_line white_line">
+				<div class="inner_sbox">
+					<div class="sub_tit ed_white">
+						<h3>문학관 행사</h3>
+					</div>
+						<hr class="t_line white_line"  />
 				</div>
 			</div>
 			<div id="box02">
-				<h3>전시 안내</h3>
-				<div id="more_btn">
-					<span></span>
-					<span></span>
+				<div class="sub_tit">
+					<h3>전시 안내</h3>
+					<div class="more_btn">
+						<a href="#"><img src="./images/more_btn.png"></a>
+					</div>
 				</div>
-				<hr / class="t_line black_line">
+				<hr class="t_line black_line"  />
+				<div id="exhibit">
 					<div>
-					<p class="sub_title">상설전시</p>
-					<p><img src="./images/s_thumb01.jpg" alt="썸네일1" /></p>
-					<p class="s_title">한국 근대문학 역사적 흐름을 한눈에</p>
-					<p>한국근대문학관 상설전시실</p>
-				</div>
-				<div>
-					<p class="sub_title">기획전시</p>
-					<p><img src="./images/s_thumb02.jpg" alt="썸네일3" /></p>
-					<p class="s_title">新 수장자료전</p>
-					<p>2020.3.7 - 2020.4.16</p>
-					<p>한국근대문학관 기획전시실</p>
-				</div>
-				<div>
-					<p class="sub_title">작은전시</p>
-					<p><img src="./images/s_thumb03.jpg" alt="썸네일3" /></p>
-					<p class="s_title">삼일운동 시로 형상화하다.</p>
-					<p>2020.7.2 - 2020.9.29</p>
-					<p>한국근대문학관 1층 로비</p>
+						<p class="sub_title">상설전시</p>
+						<img src="./images/s_thumb01.jpg" alt="썸네일1" />
+						<p class="s_title">한국 근대문학<br /> 역사적 흐름을 한눈에</p>
+						<p>한국근대문학관 상설전시실</p>
+					</div>
+					<div>
+						<p class="sub_title">기획전시</p>
+						<img src="./images/s_thumb02.jpg" alt="썸네일3" />
+						<p class="s_title">新 수장자료전</p>
+						<p>2020.3.7 - 2020.4.16</p>
+						<p>한국근대문학관 기획전시실</p>
+					</div>
+					<div>
+						<p class="sub_title">작은전시</p>
+						<img src="./images/s_thumb03.jpg" alt="썸네일3" />
+						<p class="s_title">삼일운동 시로 형상화하다.</p>
+						<p>2020.7.2 - 2020.9.29</p>
+						<p>한국근대문학관 1층 로비</p>
+					</div>
 				</div>
 			</div>
 			<div>
-				<div class="inner_mbox" id="news"><div>
-					<h3>새소식</h3>
-					<div id="more_btn">
-						<span></span>
-						<span></span>
+				<div class="inner_mbox" id="news">
+					<div class="sub_tit">
+						<h3>새소식</h3>
+						<div class="more_btn">
+							<a href="#"><img src="./images/more_btn.png"></a>
+						</div>
 					</div>
 					<hr / class="t_line black_line">
 					<ul>
-						<li><a href="#">한국근대문학관 10월 운영일정 안내</a></li>
-						<li><a href="#">&lt;문학이있는 저녁 - 한국문학특강&gt; 수... </a></li>
-						<li><a href="#">8월 24일(금) 개관 시간 조정 안내</a></li>
-						<li><a href="#">작가와 만나는 토요일 &lt;작가가 사회를 ...</a></li>
-						<li><a href="#">[인천, 시인과 만나다 4회차 일정변경 ... </a></li>
-						<li><a href="#">작가와 만나는 토요일 &lt;인천, 시인과 만...</a></li>
-						<li><a href="#">2018년 한국문학포럼 &lt;디아스포라 문...</a></li>
+						<li><a href="#">■ 한국근대문학관 10월 운영일정 안내</a></li>
+						<li><a href="#">■ &lt;문학이있는 저녁 - 한국문학특강&gt; 수... </a></li>
+						<li><a href="#">■ 8월 24일(금) 개관 시간 조정 안내</a></li>
+						<li><a href="#">■ 작가와 만나는 토요일 &lt;작가가 사회를 ...</a></li>
+						<li><a href="#">■ [인천, 시인과 만나다 4회차 일정변경 ... </a></li>
+						<li><a href="#">■ 작가와 만나는 토요일 &lt;인천, 시인과 만...</a></li>
+						<li><a href="#">■ 2018년 한국문학포럼 &lt;디아스포라 문...</a></li>
 					</ul>
-				</div>
-			</div>	
-				<div class="inner_sbox"  id="data">
-				<h3>자료실</h3>
-					<div id="more_btn">
-						<span></span>
-						<span></span>
+				</div>	
+				<div class="inner_sbox m_clear"  id="data">
+					<div class="sub_tit">
+						<h3>자료실</h3>						
+						<div class="more_btn">
+							<a href="#"><img src="./images/more_btn.png"></a>
+						</div>
 					</div>
 					<hr / class="t_line black_line">
 					<ul>
@@ -121,48 +128,59 @@
 				</div>
 			</div>
 			<div id="visit">
-				<h3>문학관을 찾은 사람들</h3>
-					<div id="more_btn">
-						<span></span>
-						<span></span>
+				<div class="sub_tit">
+					<h3>문학관을 찾은 사람들</h3>					
+					<div class="more_btn">
+						<a href="#"><img src="./images/more_btn.png"></a>
 					</div>
-					<hr / class="t_line black_line">
-					<ul>
-						<li>
-							<img src="./images/m_thumb01.jpg" alt="썸네일1" />
-							<p>일본 키타규슈시 방문단</p>
-						</li>
-						<li>
-							<img src="./images/m_thumb02.jpg" alt="썸네일2" />
-							<p>인천 대건고등학교</p>
-						</li>
-						<li>
-							<img src="./images/m_thumb03.jpg" alt="썸네일3" />
-							<p>경향신문</p>
-						</li>
-					</ul>
+				</div>
+				<hr / class="t_line black_line">
+				<ul>
+					<li>
+						<img src="./images/m_thumb01.jpg" alt="썸네일1" />
+						<p>일본 키타규슈시 방문단</p>
+					</li>
+					<li>
+						<img src="./images/m_thumb02.jpg" alt="썸네일2" />
+						<p>인천 대건고등학교</p>
+					</li>
+					<li>
+						<img src="./images/m_thumb03.jpg" alt="썸네일3" />
+						<p>경향신문</p>
+					</li>
+				</ul>
 			</div>
 			<div>
-				<div class="inner_sbox">백그라운드로 이미지</div>
-				<div class="inner_sbox" id="program">				
-					<h3>교육 프로그램</h3>
+				<div class="inner_sbox" id="people"></div>
+				<div class="inner_sbox" id="program">
+					<div class="sub_tit ed_white">			
+						<h3>교육 프로그램</h3>
+					</div>	
 					<hr / class="t_line white_line">
 				</div>
 				<div class="inner_sbox m_clear" id="infomation">
-					<h3>이용안내</h3>
-						<div id="more_btn_white">
-							<span></span>
-							<span></span>
+					<div class="sub_tit ed_white">
+						<h3>이용안내</h3>					
+						<div class="more_btn">
+							<a href="#"><img src="./images/more_btn_white.png"></a>
 						</div>
+					</div>
 					<hr / class="t_line white_line">
 					<p><strong>관람문의</strong> : 032-773-3800</p>
 					<p><strong>관람시간</strong> : 10:00 - 18:00</p>
 					<p><strong>휴관일</strong> : 매주 월요일</p>
+					<a href="#">
+						<div class="reserve">
+							<p>예약<br />하기</p>
+						</div>
+					</a>
 				</div>
 			</div>
 			<div>
-				<div class="inner_mbox">
-					<h3>교육 프로그램</h3>
+				<div class="inner_mbox" id="today">
+					<div class="sub_tit ed_white">
+						<h3>오늘의 근대문학사</h3>
+					</div>
 					<hr / class="t_line white_line">
 					<p>6월</p>
 					<ul>
@@ -179,29 +197,57 @@
 						<p>1906년 [만세보] 창간 (~1907. 6. 29)</p>
 					</div>
 					<div id="prev_btn">
-						<img src="./images/prev_btn.png" alt="이전버튼">
-						<p>이전</p>
+						<a href="#">
+							<img src="./images/prev_btn.png" alt="이전버튼">
+							<p>이전</p>
+						</a>
 					</div>
 					<div id="next_btn">
-						<img src="./images/next_btn.png" alt="다음버튼">
-						<p>다음</p>					
+						<a href="#">
+							<p>다음</p>		
+							<img src="./images/next_btn.png" alt="다음버튼">	
+						</a>		
 					</div>
 					<div></div>
 				</div>
-				<div class="inner_sbox m_clear">
-					<h3>이용안내</h3>
-							<div id="more_btn_white">
-								<span></span>
-								<span></span>
-							</div>
-						<hr / class="t_line white_line">
-						<p><strong>인천 중구 신포로15번길 76<br />한국근대문학관</strong></p>
-						<p><strong>T</strong>: 032-773-3800 <strong>F</strong> : 032-772-7193</p>
+				<div class="inner_sbox m_clear" id="come_in">
+					<div class="sub_tit ed_white">
+						<h3>오시는 길</h3>					
+						<div class="more_btn">
+							<a href="#"><img src="./images/more_btn_white.png"></a>
+						</div>
+					</div>
+					<hr / class="t_line white_line">
+					<p><strong>인천 중구 신포로15번길 76<br />한국근대문학관</strong></p>
+					<p><strong>T</strong>: 032-773-3800 <strong>F</strong> : 032-772-7193</p>
 				</div>
 			</div>		
 		</section>
+		<section class="partner">
+			<div><img src="./images/partner_logo02.gif" alt="로고"/></div>
+			<div><img src="./images/partner_logo02.png" alt="로고"/></div>
+			<div class="logo03"><img src="./images/partner_logo03.gif" alt="로고"/></div>
+			<div><img src="./images/partner_logo04.png" alt="로고"/></div>
+			<div><img src="./images/partner_logo05.png" alt="로고"/></div>
+		</section>
 		<footer>
 			<h2>푸터영역</h2>
+			<div id="addr">
+				<p>copyright(c) 2020 Incheon foundation For Arts & Culture All Right Reserved.</p>
+				<p>인천광역시 중구 신포로 15번길 76 인천문화재단</p>
+				<p><strong>TEL</strong> 032-772-7193 &nbsp;&nbsp;&nbsp;<strong>FAX</strong> 032-772-7193
+</p>
+			</div>			
+			<div id="sitemap">
+				<ul>
+					<li><a href="#">개인정보취급방침</a><li>  <li>|</li>
+					<li><a href="#">사이트맵</a></li>
+				</ul>
+				<form method="post" action="">
+					<input type="text" placeholder="--문학관 바로가기--" />
+					<input type="submit" value="GO" />
+				</form>
+			</div>			
 		</footer>
 	</div>	
 </body>
