--- a/kookhyang/index.html
+++ b/kookhyang/index.html
@@ -5,7 +5,10 @@
 	<title>국향</title>
 <link href="./css/reset.css" rel="stylesheet" type="text/css" />
 <link href="./css/style.css" rel="stylesheet" type="text/css" />
+<link href="./css/slick-theme.css" rel="stylesheet" type="text/css" />
+<link href="./css/slick.css" rel="stylesheet" type="text/css" />
 <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="./js/slick.js"></script>
 </head>
 
 <body>
@@ -23,6 +26,77 @@
 		<h1><a href="#"><img src="./img/logo.gif" alt="logo"></a></h1>
 		<nav id="gnb">
 			<div id="menu_category"><a href="#">SHOPPING</a></div>
+			<nav id="shopping_ctg">
+				<ul class="main_menu">					
+					<li><a href="#">한복</a>
+						<ul class="sub_menu">
+							<li><a href="#">- 조선시대한복.왕.용포.중전 당의.원삼
+							.대례복.평민한복 선비.양반.장군.개화기한복</a></li>
+							<li><a href="#">- 어우동한복.기생한복</a></li>
+							<li><a href="#">- 전통혼례복.설빔한복</a></li>
+							<li><a href="#">- 갓.상투관.금관.뒤꽂이.각띠 한복기타소품.
+							한복신발</a></li>						
+						</ul>
+					</li>
+					<li><a href="#">전통의상</a>
+						<ul class="sub_menu">
+							<li><a href="#">- 유대의상.성극의상.로마의상</a></li>
+							<li><a href="#">- 17~18세기.중세의상.망또류 중세드레스.
+								모더니즘정장</a></li>			
+							<li><a href="#">- 세계각국민속의상</a></li>			
+							<li><a href="#">- 어린이민속의상.어린이한복</a></li>			
+						</ul>					
+					</li>
+					<li><a href="#">특수의상</a>
+						<ul class="sub_menu">
+							<li><a href="#">- 장기자랑.반짝이자켓.조끼류 반짝이원피스.
+조끼</a></li>		
+							<li><a href="#">- 여장남자.반짝이의상.펑크락 코믹.전신타이
+즈.가죽의상</a></li>		
+							<li><a href="#">- 옛날교복.현대교복</a></li>		
+							<li><a href="#">- 복고남방.복고원피스.츄리닝 바캉스남방.
+바바리코트</a></li>		
+							<li><a href="#">- 액션영웅.할로윈의상.삐에로 왕자.공주.
+천사.요정.마녀</a></li>		
+							<li><a href="#">- 에니메이션.코스프레의상</a></li>		
+							<li><a href="#">- 동화.영화.연극.뮤지컬</a></li>		
+							<li><a href="#">- 캉캉춤복.플라밍고.쌈바</a></li>		
+							<li><a href="#">- 산타복/산타소품</a></li>		
+						</ul>					
+					</li>
+					<li><a href="#">소품</a>
+						<ul class="sub_menu">
+							<li><a href="#">- 앤틱가구.앤틱소품.골동품(연극/영화/무대
+미술소품)</a></li>
+							<li><a href="#">- 조선시대왕의자.가마.병풍</a></li>
+							<li><a href="#">- 지팡이.가검류.권총.삼지창 칼.활.화살.할통
+.도끼.방패</a></li>
+							<li><a href="#">- 군용소품.제복벨트.패션벨트</a></li>
+							<li><a href="#">- 나비넥타이.머리띠.왕관.봉 부채.날개.장갑
+.악세서리</a></li>
+							<li><a href="#">- 가면.안경.선글라스</a></li>
+							<li><a href="#">- 가발.수염</a></li>
+							<li><a href="#">- 모자.투구.화환.핼맷</a></li>
+							<li><a href="#">- 부츠.구두.샌들.신발</a></li>
+							<li><a href="#">- 동물탈인형</a></li>
+						</ul>					
+					</li>
+					<li><a href="#">정장/드레스</a>
+						<ul class="sub_menu">
+							<li><a href="#">- 턱시도.양복.복고정장.타이</a></li>
+							<li><a href="#">- 파티드레스.여신.웨딩드레스</a></li>
+						</ul>					
+					</li>
+					<li><a href="#">유니폼</a>
+						<ul class="sub_menu">
+							<li><a href="#">- 직업의상.호텔리어.외국경찰 항공사.파일
+럿.병원복.종교인 검사.판사가운.복싱가운</a></li>
+						</ul>
+					</li>
+					<li><a href="#">특가판매의상</a></li>
+					<li><a href="#">개인결제창</a></li>
+				</ul>
+			</nav>
 			<ul>
 				<li><a href="#">회사소개</a></li>
 				<li><a href="#">매장안내</a></li>
@@ -43,8 +117,92 @@
 <section id="best_product">
 	<h2>베스트상품 영역</h2>
 	<h3>BEST PRODUCT</h3>
-	<div>
-		<ul>
+			<!--
+	<section class="center2 slider">
+    <div>
+      <div class="caption">1</div>
+				<a href="#" id="best01"></a>				
+				<a href="#">
+					<p class="product_t">중세왕의자/복면가왕의자스타일/<br />
+					엔틱의자/왕복운임(서울,경기도)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>
+    </div>
+    <div>
+      <div class="caption">2</div>
+				<a href="#" id="best02"></a>		
+				<a href="#">				
+					<p class="product_t">궁중한복/궁중당의/중전당의/수박<br />
+					색당의세트/큰사이즈가능(3681-5번)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>	
+    </div>
+    <div>
+      <div class="caption">3</div>
+				<a href="#"  id="best03"></a>	
+				<a href="#">
+					<p class="product_t">전통혼례복/사모관대/
+					폐백의상<br />(1039-9번)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>
+    </div>
+    <div>
+      <div class="caption">4</div>
+				<a href="#"  id="best04"></a>	
+				<a href="#">			
+					<p class="product_t">공주당의세트/핑크공주한복
+					<br />(3938-7번)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>
+    </div>
+    <div>
+      <div class="caption">1</div>
+				<a href="#" id="best01"></a>				
+				<a href="#">
+					<p class="product_t">중세왕의자/복면가왕의자스타일/<br />
+					엔틱의자/왕복운임(서울,경기도)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>
+    </div>
+    <div>
+      <div class="caption">2</div>
+				<a href="#" id="best02"></a>		
+				<a href="#">				
+					<p class="product_t">궁중한복/궁중당의/중전당의/수박<br />
+					색당의세트/큰사이즈가능(3681-5번)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>	
+    </div>
+    <div>
+      <div class="caption">3</div>
+				<a href="#"  id="best03"></a>	
+				<a href="#">
+					<p class="product_t">전통혼례복/사모관대/
+					폐백의상<br />(1039-9번)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>
+    </div>
+    <div>
+      <div class="caption">4</div>
+				<a href="#"  id="best04"></a>	
+				<a href="#">			
+					<p class="product_t">공주당의세트/핑크공주한복
+					<br />(3938-7번)<br />
+					[대여]</p>
+					<p class="price">500,000원</p>
+				</a>
+    </div>
+  </section>
+			-->
+	<div class="slide">
+		<ul class="showSlide">
 			<li>
 				<div class="caption">1</div>
 				<a href="#" id="best01"></a>				
@@ -85,37 +243,11 @@
 					<p class="price">500,000원</p>
 				</a>
 			</li>
-			<!--
-			<li>
-				<div class="caption">5</div>
-				<a href="#"></a>				
-				<p class="product_t">중세왕의자/복면가왕의자스타일/
-				엔틱의자/왕복운임(서울,경기도)<br />
-				[대여]</p>
-				<p class="price">500,000원</p>
-			</li>
-			<li>
-				<div class="caption">6</div>
-				<a href="#"></a>						
-				<p class="product_t">궁중한복/궁중당의/중전당의/수박
-				색당의세트/큰사이즈가능(3681-5번)<br />
-				[대여]</p>
-				<p class="price">500,000원</p>
-			</li>
-			<li>
-				<div class="caption">7</div>
-				<a href="#"></a>			
-				<p class="product_t">전통혼례복/사모관대/
-				폐백의상(1039-9번)<br />
-				[대여]</p>
-				<p class="price">500,000원</p>
-			</li>
-			-->
 		</ul>
 	</div>
-	<div>
-		<a href="#"><img src="./img/prev.png" alt="이전" class="prev"></a>
-		<a href="#"><img src="./img/next.png" alt="다음" class="next"></a>
+	<div class="btn_wrap">
+		<img src="./img/prev.png" onclick="prevFun()" class="prev" />
+		<img src="./img/next.png" onclick="nextFun()" class="next" />
 	</div>
 </section>
 <section id="new">		
@@ -250,5 +382,67 @@
 대표이사 : 최우정 copyright (c) 국향 all right reserved.
 </p>
 </footer>
+
+<script>
+$(function(){
+	$("#menu_category>a").mouseover(function(){
+		$("#shopping_ctg").stop().slideDown(300); //마우스 올렸을 때
+	});
+	$("#shopping_ctg").mouseleave(function(){
+		$("#shopping_ctg").stop().slideUp(100); //마우스 떠났을 떄
+	});	
+});
+
+</script>
+<script>
+function prevFun(){
+	$(".showSlide").prepend($(".showSlide li").last().clone().css("opacity",0));
+	$(".showSlide li:last-child").remove();
+	// .detach() : 선택한 요소 제거 후 해당 자리에 붙여넣기하는 메소드
+	$(".showSlide li:first-child").animate({"opacity":"1"});
+}
+function nextFun(){
+	$(".showSlide").append($(".showSlide li").first().clone());
+	$(".showSlide li:first-child").remove();
+	$(".showSlide li:nth-child(4)").css("opacity",0);
+	$(".showSlide li:nth-child(4)").animate({"opacity":"1"});
+}
+
+
+
+</script>
+<!--
+	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+	<script src="./js/slick.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+    $(document).on('ready', function() {
+      $(".center2").slick({ // **
+        centerMode: true,
+		  centerPadding: '60px',
+		  slidesToShow: 4,
+		  responsive: [
+			{
+			  breakpoint: 768,
+			  settings: {
+				arrows: false,
+				centerMode: true,
+				centerPadding: '40px',
+				slidesToShow: 1
+			  }
+			},
+			{
+			  breakpoint: 480,
+			  settings: {
+				arrows: false,
+				centerMode: true,
+				centerPadding: '40px',
+				slidesToShow: 1
+			  }
+			}
+		  ]
+      });
+    });
+</script>
+-->
 </body>
 </html>
